# UBUNTU_TOUCH_APP

./: .gitignore  AUDIT_SISTEMA_RAG.md  CLAUDE.md  CMakeLists.txt  HANDOFF.md  HANDOFF_INGESTA.md  LICENSE  README.md  clickable.yaml  manifest.json.in  ragassistant.apparmor  ragassistant.desktop.in
po/: en.po  es.po  nl.po  ragassistant.ragassistant.pot
qml/: AppI18n.qml  AppTheme.qml  BrainPage.qml  ChatPage.qml  Main.qml  SettingsPage.qml  SplashScreen.qml
qml/components/: AccentFlicker.qml  AccentSweep.qml  AppText.qml  BrandMark.qml  Card.qml  ColorPickerPopover.qml  ConversationList.qml  CrtTransition.qml  ErrorBanner.qml  FieldLabel.qml  MessageBubble.qml  PressEffect.qml  SkeletonBubble.qml  StyledField.qml  SuggestionCard.qml  ThemeTransition.qml  TransLabel.qml  TypingIndicator.qml
qml/js/: BrainMetrics.js  ChromaClient.js  I18nData.js  Markdown.js  OpenRouterClient.js  RagOrchestrator.js  Store.js  Time.js
qml/js/tools/: builtins.js  registry.js
src/: CMakeLists.txt  audiorecorder.cpp  audiorecorder.h  main.cpp  timeutil.cpp  timeutil.h  ttsclient.cpp  ttsclient.h  whisperclient.cpp  whisperclient.h
